--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,14 @@
   "lint": {
     "files": {
       "exclude": ["test"]
+    },
+    "rules": {
+      "exclude": [
+        "no-explicit-any",
+        "require-await",
+        "no-empty",
+        "no-unused-vars"
+      ]
     }
   }
 }
